# promenade

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: example.yaml  simple.yaml  widget_types.yaml
src/promenade/: __init__.py  app.py  cli.py  config.py  prometheus.py  schema.py  widgets.py
